--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="scoreboard" appCrtEffect></div>
 <app-score-input (newScore)="addScore($event)"></app-score-input>
 <app-scoreboard [scores]="scores"></app-scoreboard>
-<div class="scoreboard" appCrtEffect>
+
