--- a/src/app/score-input/score-input.component.html
+++ b/src/app/score-input/score-input.component.html
@@ -1,5 +1,3 @@
-<div class="score-input">
-  <input type="text" [(ngModel)]="playerName" placeholder="Enter initials" maxlength="3" />
-  <input type="number" [(ngModel)]="playerScore" placeholder="Enter score" />
-  <button (click)="submitScore()">Submit</button>
-</div>
+<input type="text" [(ngModel)]="playerName" placeholder="Enter Name" />
+<input type="number" [(ngModel)]="playerScore" placeholder="Enter Score" />
+<button (click)="submitScore()">Submit</button>
